# precision-decimal

./: .gitignore  pyproject.toml
precision_decimal/: precision_decimal.py
